[package]
name = "keypop"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "keypop"
path = "src/main.rs"

[dependencies]
evdev = "0.12.2"
eframe = { version = "0.29", features = ["wayland", "x11", "wgpu"] }
egui = "0.29.1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
