[package]
name = "keypop"
version = "0.1.2"
edition = "2024"
description = "Transparent keypress overlay for Linux screencasts and demos"
license = "MIT"
repository = "https://github.com/OmChillure/keypop"
keywords = ["keypress", "overlay", "screencast", "wayland", "linux"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "keypop"
path = "src/main.rs"

[dependencies]
evdev = "0.12.2"
eframe = { version = "0.29", features = ["wayland", "x11", "wgpu"] }
egui = "0.29.1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
x11rb = "0.13"
